fix: CSRF error when testing endpoints through Swagger UI
